# Lumen

./: .gitignore  COMMIT_MSG  Cargo.toml  README.md  sigs.json  skills-lock.json
.claude/: settings.json
lumen-engine/: Cargo.toml
lumen-engine/src/: db.rs  lib.rs  scanner.rs  sigs.csv  types.rs
lumen-gui/: download-7z.ps1  package-lock.json  package.json
lumen-gui/src/: app.js  index.html  styles.css
lumen-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
lumen-gui/src-tauri/capabilities/: default.json
lumen-gui/src-tauri/src/: main.rs
