[package]
name = "lumen-engine"
version = "0.1.2"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
ureq = { version = "2", features = [] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
sevenz-rust = "0.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "lumen-seed"
path = "src/bin/seed_db.rs"
required-features = []

[[bin]]
name = "lumen-test"
path = "src/bin/test_scan.rs"
required-features = []

[[bin]]
name = "lumen-fetch"
path = "src/bin/fetch_sigs.rs"
required-features = []

