[package]
name = "lumen-gui"
version = "0.1.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lumen-engine = { path = "../../lumen-engine" }
tauri = { version = "2", features = [] }
rfd = "0.16"  # native file dialogs
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = [] }
